--- a/FlowerShop/login_page.html
+++ b/FlowerShop/login_page.html
@@ -1,15 +1,16 @@
 <!doctype html>
 
 <html>
- <head>
-  <link rel="stylesheet" href="login_page_style.css">
- </head>
+	<head>
+		<link rel="stylesheet" href="login_page_style.css">
+		<link rel="icon" href="data:;base64,=">
+	</head>
  <body id="parent">
   <header>
 	The Simple Flower Shopping Website
 	<p><a href="http://localhost:8080/index.html">Go to Homepage</a></p>
   </header>
-  <div class="main">
+  <div id="main" class="main">
 	<h1 id=header>Login</h1>
 	<form id="child">
 		<input id="email" type="text" placeholder="Email">
