--- a/GardenShop/index.html
+++ b/GardenShop/index.html
@@ -12,6 +12,79 @@
 			<li><a href="http://localhost:8080/index.html">Home</a></li>
 		</ul>
 	    </header>
+		<p>Flowers</p>
+		<div class="row">
+			<div class="column">
+				<p>Purple Rose</p>
+				<img src="\flowers\purple-bouquet-1316980-639x949.jpg" width="300" height="300">
+				<p>Photo by <a href="https://freeimages.com/photographer/sh0dan-42994">Klaus Post</a> from <a href="https://freeimages.com/">FreeImages</a></p>
+				<p>Price: $4.00</p>
+				<button>Add to cart</button>
+			</div>
+			<div class="column">
+				<p>Pink Rose</p>
+				<img src="\flowers\flowers-1311182-639x757.jpg" width="300" height="300">
+				<p>Photo by <a href="https://freeimages.com/photographer/fresh-m-44134">Mátyás Huszár</a> from <a href="https://freeimages.com/">FreeImages</a></p>
+				<p>Price: $5.00</p>
+				<button>Add to cart</button>
+			</div>
+			<div class="column">
+				<p>Violet</p>
+				<img src="\flowers\violet-1401538-638x493.jpg" width="300" height="300">
+				<p>Photo by <a href="https://freeimages.com/photographer/asterisco-31400">Marcelo Moura</a> from <a href="https://freeimages.com/">FreeImages</a></p>
+				<p>Price: $5.50</p>
+				<button>Add to cart</button>
+			</div>
+		</div>
+		<p>Plants</p>
+		<div class="row">
+			<div class="column">
+				<p>Normal plant</p>
+				<img src="\plants\vase-with-plant-1-1195601-1279x1744.jpg" width="300" height="300">
+				<p>Photo by <a href="https://freeimages.com/photographer/asterisco-31400">Marcelo Moura</a> from <a href="https://freeimages.com/">FreeImages</a></p>
+				<p>Price: $10.00</p>
+				<button>Add to cart</button>
+			</div>
+			<div class="column">
+				<p>Bamboo</p>
+				<img src="\plants\a-gift-1531770-639x852.jpg" width="300" height="300">
+				<p>Photo by <a href="https://freeimages.com/photographer/verzerk-31774">alfonso diaz</a> from <a href="https://freeimages.com/">FreeImages</a></p>
+				<p>Price: $15.00</p>
+				<button>Add to cart</button>
+			</div>
+			<div class="column">
+				<p>Grass plant</p>
+				<img src="\plants\plant-in-red-vase-1395125-639x852.jpg" width="300" height="300">
+				<p>Photo by <a href="https://freeimages.com/photographer/michelini-47800">Marco Michelini</a> from <a href="https://freeimages.com/">FreeImages</a></p>
+				<p>Price: $6.50</p>
+				<button>Add to cart</button>
+			</div>
+		</div>
+		<p>Garden Tools</p>
+		<div class="row">
+			<div class="column">
+				<p>Vase</p>
+				<img src="\garden_stuff\vase-1423822-640x1216.jpg" width="300" height="300">
+				<p>Photo by <a href="https://freeimages.com/photographer/vierdrie-46406">Jean Scheijen</a> from <a href="https://freeimages.com/">FreeImages</a></p>
+				<p>Price: $15.00</p>
+				<button>Add to cart</button>
+			</div>
+			<div class="column">
+				<p>Scissor</p>
+				<img src="\garden_stuff\old-scissors-1421726-640x640.jpg" width="300" height="300">
+				<p>Photo by <a href="https://freeimages.com/photographer/vierdrie-46406">Jean Scheijen</a> from <a href="https://freeimages.com/">FreeImages</a></p>
+				<p>Price: $5.50</p>
+				<button>Add to cart</button>
+			</div>
+			<div class="column">
+				<p>Watering can</p>
+				<img src="\garden_stuff\watering-can-1418894-639x435.jpg" width="300" height="300">
+				<p>Photo by <a href="https://freeimages.com/photographer/berenika-58458">Patrycja Cieszkowska</a> from <a href="https://freeimages.com/">FreeImages</a></p>
+				<p>Price: $7.00</p>
+				<button>Add to cart</button>
+			</div>
+		</div>
+		<footer>Made by Guilherme</footer>
 		<script type="text/javascript" src="index_script.js"></script>
 	</body>
 </html>
