Adding more style to index.html and login feature

--- a/GardenShop/login_page.html
+++ b/GardenShop/login_page.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="login_page_style.css">
-		<link rel="icon" href="data:;base64,=">
+		<link rel="shortcut icon" href="#">
 	</head>
  <body id="parent">
   <header>
@@ -24,6 +24,6 @@
 	</form>
   </div>
   <footer>Made by Guilherme</footer>
-  <script type="text/javascript" src="login_page_script.js"></script>
+  <script src="login_page_script.js"></script>
  </body>
 </html>
