Adding the first implementation of cart.html

--- a/GardenShop/index.html
+++ b/GardenShop/index.html
@@ -13,29 +13,29 @@
 		</ul>
 	    </header>
 		<p class="category">Flowers</p>
-		<button class="cart">See cart</button>
-		<p class="itemsNum">Number of items in cart: </p>
+		<button class="cart" onClick="accessCart()">See cart</button>
+		<p id="itemsNum" class="itemsNum">Number of items in cart: 0</p>
 		<div class="row">
 			<div class="column">
 				<p>Purple Rose</p>
 				<img src="\flowers\purple-bouquet-1316980-639x949.jpg" width="300" height="300">
 				<p class="author">Photo by <a href="https://freeimages.com/photographer/sh0dan-42994">Klaus Post</a> from <a href="https://freeimages.com/">FreeImages</a></p>
 				<p>Price: $4.00</p>
-				<button>Add to cart</button>
+				<button onClick="addPurpleRose()">Add to cart</button>
 			</div>
 			<div class="column">
 				<p>Pink Rose</p>
 				<img src="\flowers\flowers-1311182-639x757.jpg" width="300" height="300">
 				<p class="author">Photo by <a href="https://freeimages.com/photographer/fresh-m-44134">Mátyás Huszár</a> from <a href="https://freeimages.com/">FreeImages</a></p>
 				<p>Price: $5.00</p>
-				<button>Add to cart</button>
+				<button onClick="addPinkRose()">Add to cart</button>
 			</div>
 			<div class="column">
 				<p>Violet</p>
 				<img src="\flowers\violet-1401538-638x493.jpg" width="300" height="300">
 				<p class="author">Photo by <a href="https://freeimages.com/photographer/asterisco-31400">Marcelo Moura</a> from <a href="https://freeimages.com/">FreeImages</a></p>
 				<p>Price: $5.50</p>
-				<button>Add to cart</button>
+				<button onClick="addViolet()">Add to cart</button>
 			</div>
 		</div>
 		<p class="category">Plants</p>
@@ -45,21 +45,21 @@
 				<img src="\plants\vase-with-plant-1-1195601-1279x1744.jpg" width="300" height="300">
 				<p class="author">Photo by <a href="https://freeimages.com/photographer/asterisco-31400">Marcelo Moura</a> from <a href="https://freeimages.com/">FreeImages</a></p>
 				<p>Price: $10.00</p>
-				<button>Add to cart</button>
+				<button onClick="addNormalPlant()">Add to cart</button>
 			</div>
 			<div class="column">
 				<p>Bamboo</p>
 				<img src="\plants\a-gift-1531770-639x852.jpg" width="300" height="300">
 				<p class="author">Photo by <a href="https://freeimages.com/photographer/verzerk-31774">alfonso diaz</a> from <a href="https://freeimages.com/">FreeImages</a></p>
 				<p>Price: $15.00</p>
-				<button>Add to cart</button>
+				<button onClick="addBamboo()">Add to cart</button>
 			</div>
 			<div class="column">
 				<p>Grass plant</p>
 				<img src="\plants\plant-in-red-vase-1395125-639x852.jpg" width="300" height="300">
 				<p class="author">Photo by <a href="https://freeimages.com/photographer/michelini-47800">Marco Michelini</a> from <a href="https://freeimages.com/">FreeImages</a></p>
 				<p>Price: $6.50</p>
-				<button>Add to cart</button>
+				<button onClick="addGrassPlant()">Add to cart</button>
 			</div>
 		</div>
 		<p class="category">Garden Tools</p>
@@ -69,21 +69,21 @@
 				<img src="\garden_stuff\vase-1423822-640x1216.jpg" width="300" height="300">
 				<p class="author">Photo by <a href="https://freeimages.com/photographer/vierdrie-46406">Jean Scheijen</a> from <a href="https://freeimages.com/">FreeImages</a></p>
 				<p>Price: $15.00</p>
-				<button>Add to cart</button>
+				<button onClick="addVase()">Add to cart</button>
 			</div>
 			<div class="column">
 				<p>Scissor</p>
 				<img src="\garden_stuff\old-scissors-1421726-640x640.jpg" width="300" height="300">
 				<p class="author">Photo by <a href="https://freeimages.com/photographer/vierdrie-46406">Jean Scheijen</a> from <a href="https://freeimages.com/">FreeImages</a></p>
 				<p>Price: $5.50</p>
-				<button>Add to cart</button>
+				<button onClick="addScissor()">Add to cart</button>
 			</div>
 			<div class="column">
 				<p>Watering can</p>
 				<img src="\garden_stuff\watering-can-1418894-639x435.jpg" width="300" height="300">
 				<p class="author">Photo by <a href="https://freeimages.com/photographer/berenika-58458">Patrycja Cieszkowska</a> from <a href="https://freeimages.com/">FreeImages</a></p>
 				<p>Price: $7.00</p>
-				<button>Add to cart</button>
+				<button onClick="addWateringCan()">Add to cart</button>
 			</div>
 		</div>
 		<footer>Made by Guilherme</footer>
