--- a/GardenShop/user_created/user_created_template.html
+++ b/GardenShop/user_created/user_created_template.html
@@ -12,8 +12,8 @@
   <div id="main" class="main">
 	<h1 id=header>Account created!</h1>
 	<div id="child">
-		<p>Your email is: pannain@hotmail.com<p>
-		<p>Your password is: panna123</p>
+		<p>Your email is: ?<p>
+		<p>Your password is: #</p>
 	</div>
   </div>
   <footer>Made by Guilherme</footer>
