implementing logout feature

--- a/GardenShop/carts/template_cart.html
+++ b/GardenShop/carts/template_cart.html
@@ -13,7 +13,7 @@
 			<li class="option"><a href="http://localhost:8080/index.html">Home</a></li>
 		</ul>
 	    </header>
-		<p>You have the following items in your cart:</p>
+		<h1>You have the following items in your cart:</h1>
 		<div>
 		<ol>
 %
