--- a/GardenShop/user_page.html
+++ b/GardenShop/user_page.html
@@ -1,7 +1,20 @@
 <!doctype html>
 
 <html>
+	<head>
+		<link rel="stylesheet" href="user_page_style.css">
+	</head>
 	<body>
-		Welcome to the login page!
+		<header>
+		<ul class="header">
+			<li class="logo">The Simple Garden Shop Website</li>
+			<li class="option"><a href="">About</a></li>
+			<li class="option"><a href="http://localhost:8080/index.html">Home</a></li>
+			<li class="option"><button onClick="logout()">Logout</button></li>
+		</ul>
+	    </header>
+		<h1>Welcome!</h1>
+		<h2>Your past orders:</h2>
+		<script type="text/javascript" src="user_page_script.js"></script>
 	</body>
 </html>
