implementing remove feature, checking if user is logged and adding some improvements to login feature

--- a/GardenShop/carts/template_cart.html
+++ b/GardenShop/carts/template_cart.html
@@ -20,5 +20,6 @@
 		</ol>
 		</div>
 		<button>Order now!</button> <!-- When user cliks here, remove his cart from database. You can only if you are logged in  -->
+		<script type="text/javascript" src="\carts\template_cart_script.js"></script>
 	</body>
 </html>
